# ChangeLog for app-text/evince
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.72 2006/12/10 19:07:14 ticho Exp $

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org> evince-0.6.1.ebuild:
  Stable on x86, bug #156662.

  09 Nov 2006; Doug Goldstein <cardoe@gentoo.org> evince-0.5.3-r1.ebuild,
  evince-0.6.0.ebuild, evince-0.6.1.ebuild:
  Update D-Bus depends to new bindings

  22 Oct 2006; Daniel Gryniewicz <dang@gentoo.org>
  -files/evince-0.4.0-display-menu.patch, -files/evince-0.4.0-no-tiff.patch,
  -files/evince-0.4.0-t1lib_is_t1.patch, -evince-0.4.0-r3.ebuild,
  -evince-0.5.0.ebuild, -evince-0.5.1.ebuild, -evince-0.5.4.ebuild,
  -evince-0.5.5.ebuild:
  Cleanup old versions

  21 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> evince-0.6.0.ebuild:
  Stable on ia64, bug 151835.

  21 Oct 2006; Jeroen Roovers <jer@gentoo.org> evince-0.6.0.ebuild:
  Stable for HPPA (bug #151835).

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> evince-0.5.3-r1.ebuild:
  Mark 0.5.3-r1 stable on alpha

  19 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> evince-0.6.0.ebuild:
  Stable on Alpha.

  18 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> evince-0.6.0.ebuild:
  Stable on ppc; bug #151835

  18 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> evince-0.6.0.ebuild:
  Stable on sparc wrt #151835

  18 Oct 2006; Andrej Kacian <ticho@gentoo.org> evince-0.6.0.ebuild:
  Stable on x86, bug #151835.

  18 Oct 2006; Markus Rothe <corsair@gentoo.org> evince-0.6.0.ebuild:
  Stable on ppc64; bug #151835

  18 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> evince-0.6.0.ebuild:
  Marked stable on amd64 for bug #151835

  18 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> +evince-0.6.1.ebuild:
  New upstream version

*evince-0.6.1 (18 Oct 2006)

  18 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> +evince-0.6.1.ebuild:
  Bump to 0.6.1

  06 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> evince-0.4.0-r3.ebuild,