@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnome-doc-utils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.65 2006/12/10 17:00:34 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.66 2006/12/12 16:17:31 wolf31o2 Exp $
+
+  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  gnome-doc-utils-0.8.0.ebuild:
+  Stable on amd64 wrt bug #156662.
 
   10 Dec 2006; Andrej Kacian <ticho@gentoo.org>
   gnome-doc-utils-0.8.0.ebuild:
