@@ -1,6 +1,9 @@
 # ChangeLog for app-text/iso-codes
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.25 2006/12/10 17:51:22 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.26 2006/12/12 16:18:07 wolf31o2 Exp $
+
+  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> iso-codes-0.58.ebuild:
+  Stable on amd64 wrt bug #156662.
 
   10 Dec 2006; Andrej Kacian <ticho@gentoo.org> iso-codes-0.58.ebuild:
   Stable on x86, bug #156662.
