@@ -1,6 +1,9 @@
 # ChangeLog for app-text/evince
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.72 2006/12/10 19:07:14 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.73 2006/12/12 16:16:51 wolf31o2 Exp $
+
+  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> evince-0.6.1.ebuild:
+  Stable on amd64 wrt bug #156662.
 
   10 Dec 2006; Andrej Kacian <ticho@gentoo.org> evince-0.6.1.ebuild:
   Stable on x86, bug #156662.
